--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ss-jade": "0.1.x",
     "ss-stylus": "0.1.x",
     "ss-hogan": "0.1.x",
+    "ss-engine.io":"latest",
     "bcrypt": "0.5.0",
     "mongoose":"2.5.0",
     "node-uuid":"latest",
