Fleshed out a test for the authentication.forgotPassword RPC module method concerning mailing.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "selenium-launcher":"latest",
     "soda":"latest",
     "cucumber":"latest",
-    "mocha":"latest"
+    "mocha":"latest",
+    "gently":"latest"
   }
 }
