more widgets and an update to the raphael library. Credit @nrn

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "Dashku",
   "description": "Realtime dashboards and widgets built with HTML, CSS, and JavaScript",
   "version": "0.0.1",
-  "author": "Anephenix <paul@anephenix.com>",
+  "author": "Anephenix <paul@anephenix.com> (http://anephenix.com)",
+  "contributors": [
+    "Nick Niemeir <nick.niemeir@gmail.com> (http://nrn.io)"
+  ],
   "private": true,
   "engines": { "node": ">= 0.6.0" },
   "dependencies": {
