Removed some global references in the codebase

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect":"= 2.0.3",
     "connect-route":"latest",
     "nodemailer": "latest",
+    "options":"latest",
     "marked":"latest"
   },
   "devDependencies":{
