Updated ss-engine.io to 0.0.4

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ss-jade": "0.1.x",
     "ss-stylus": "0.1.x",
     "ss-hogan": "0.1.x",
-    "ss-engine.io":"latest",
+    "ss-engine.io":"0.0.4",
     "bcrypt": "0.6.0",
     "mongoose":"2.5.0",
     "node-uuid":"latest",
