Updated dependency reference and tests

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "engines": { "node": ">= 0.6.0" },
   "dependencies": {
-    "socketstream": "0.3.2",
+    "socketstream": "git://github.com/socketstream/socketstream.git",
     "ss-coffee": "0.1.x",
     "ss-jade": "0.1.x",
     "ss-stylus": "0.1.x",
