--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "underscore":"latest",
     "request":"latest",
     "redis":"latest",
-    "connect":"= 2.0.3",
-    "connect-route":"latest",
+    "connect-route":"0.1.3",
     "nodemailer": "latest",
     "options":"latest",
     "marked":"latest",
