--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
   "version": "0.0.1",
   "author": "Anephenix <paul@anephenix.com> (http://anephenix.com)",
   "contributors": [
-    "Nick Niemeir <nick.niemeir@gmail.com> (http://nrn.io)"
+    "Nick Niemeir <nick.niemeir@gmail.com> (http://nrn.io)",
+    "Stuart Quin (https://github.com/stuartquin)",
+    "Joe Passavanti <gottaloveit@gmail.com>"
   ],
   "private": true,
   "engines": { "node": ">= 0.6.0" },
   "dependencies": {
-    "socketstream": "git://github.com/socketstream/socketstream.git",
-    "ss-coffee": "0.1.x",
-    "ss-jade": "0.1.x",
-    "ss-stylus": "0.1.x",
-    "ss-hogan": "0.1.x",
-    "ss-engine.io":"0.0.8",
-    "bcrypt": "0.6.0",
-    "mongoose":"2.5.0",
-    "node-uuid":"latest",
-    "underscore":"latest",
-    "request":"latest",
-    "redis":"latest",
-    "connect-route":"0.1.3",
-    "nodemailer": "latest",
-    "options":"latest",
-    "marked":"latest",
-    "coffee-script":"latest"
+    "socketstream"  : "git://github.com/socketstream/socketstream.git",
+    "ss-coffee"     : "0.1.x",
+    "ss-jade"       : "0.1.x",
+    "ss-stylus"     : "0.1.x",
+    "ss-hogan"      : "0.1.x",
+    "ss-engine.io"  : "0.0.8",
+    "bcrypt"        : "0.6.0",
+    "mongoose"      : "2.5.0",
+    "node-uuid"     : "latest",
+    "underscore"    : "latest",
+    "request"       : "latest",
+    "redis"         : "latest",
+    "connect-route" : "0.1.3",
+    "nodemailer"    : "latest",
+    "options"       : "latest",
+    "marked"        : "latest",
+    "coffee-script" : "latest"
   },
   "devDependencies":{
     "selenium-launcher":"latest",
