--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ node_js:
 services: 
   - mongodb
   - redis-server
+
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
+script: npm test && node_modules/.bin/cucumber.js
