updated README and package.json to use simpler commands for tasks

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 
-script: npm test && node_modules/.bin/cucumber.js
+script: npm test && npm run-script cuke
