A few changes to make Cucumber.js features not fail randomly, plus updated SocketStream to 0.3.3

--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "options"       : "latest",
     "redis"         : "latest",
     "request"       : "latest",
-    "socketstream"  : "git://github.com/socketstream/socketstream.git",
+    "socketstream"  : "0.3.3",
     "ss-coffee"     : "0.1.x",
-    "ss-engine.io"  : "0.1.1",
     "ss-hogan"      : "0.1.x",
     "ss-jade"       : "0.1.x",
     "ss-stylus"     : "0.1.x",
