--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "start"                   : "./node_modules/.bin/coffee app.coffee",
     "test"                    : "./node_modules/.bin/cake test",
     "cuke"                    : "./node_modules/.bin/cucumber.js",
-    "populateWidgetTemplates" : "node_modules/.bin/cake populateWidgetTemplates"
+    "populateWidgetTemplates" : "./node_modules/.bin/cake populateWidgetTemplates",
+    "console"                 : "./node_modules/.bin/coffee repl.coffee"
   }
 }
