--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "options"       : "latest",
     "redis"         : "latest",
     "request"       : "latest",
-    "socketstream"  : "0.3.6",
+    "socketstream"  : "git://github.com/socketstream/socketstream.git",
     "ss-coffee"     : "0.1.x",
     "ss-hogan"      : "0.1.x",
     "ss-jade"       : "0.1.x",
