Small tweaks to the travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 
-script: npm test && npm run-script cuke
+script: 
+  - npm test
+  - npm run cuke
