--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "engines"       : { "node": ">= 0.6.0" },
   "dependencies"  : {
     "bcrypt"        : "0.7.7",
-    "coffee-script" : "latest",
+    "coffee-script" : "1.3.3",
     "connect-route" : "0.1.3",
     "marked"        : "latest",
     "mongoose"      : "2.9.6",
