--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies" : {
     "cucumber"            : "latest",
     "gently"              : "latest",
-    "mocha"               : "latest",
+    "mocha"               : "1.17.1",
     "selenium-launcher"   : "latest",
     "soda"                : "latest",
     "coveralls"           : "2.0.16",
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "start"                   : "node app",
-    "test"                    : "./node_modules/.bin/cake test",
+    "test"                    : "NODE_ENV=test node_modules/.bin/mocha --compilers coffee:coffee-script test/**/*",
     "cuke"                    : "./node_modules/.bin/cucumber.js",
     "populateWidgetTemplates" : "./node_modules/.bin/cake populateWidgetTemplates",
     "console"                 : "node repl"
