--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "start"                   : "node app",
     "test"                    : "NODE_ENV=test node_modules/.bin/mocha --compilers coffee:coffee-script test/**/*",
     "cuke"                    : "./node_modules/.bin/cucumber.js",
+    "regenerateApiKeyDb"      : "node ./lib/regenerateApiKeyDb",
     "populateWidgetTemplates" : "./node_modules/.bin/cake populateWidgetTemplates",
     "console"                 : "node repl"
   }
