--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "start"                   : "node app",
-    "test"                    : "NODE_ENV=test node_modules/.bin/mocha --compilers coffee:coffee-script test/**/*",
+    "test"                    : "NODE_ENV=test node_modules/.bin/mocha --compilers coffee:coffee-script test/server/**/*",
     "cuke"                    : "./node_modules/.bin/cucumber.js",
     "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
     "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
