--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "engines"       : { "node": ">= 0.6.0" },
   "dependencies"  : {
     "bcrypt"        : "0.7.7",
-    "coffee-script" : "1.3.3",
     "connect-route" : "0.1.3",
     "marked"        : "latest",
     "mongoose"      : "2.9.6",
@@ -40,7 +39,7 @@
   },
   "scripts": {
     "start"                   : "node app",
-    "test"                    : "NODE_ENV=test node_modules/.bin/mocha --compilers coffee:coffee-script test/server/**/*",
+    "test"                    : "NODE_ENV=test node_modules/.bin/mocha test/server/**/*",
     "cuke"                    : "./node_modules/.bin/cucumber.js",
     "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
     "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
