--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
   "scripts": {
     "start"                   : "node app",
     "test"                    : "NODE_ENV=test node_modules/.bin/mocha test/server/**/*",
-    "cover"                   : "node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js",
-    "cuke"                    : "./node_modules/.bin/cucumber.js",
+    "cover-test"              : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/*",
+    "cover-cukes"             : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js",
+    "cuke"                    : "NODE_ENV=cucumber ./node_modules/.bin/cucumber.js",
     "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
     "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
     "console"                 : "node repl"
