--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "test"                    : "NODE_ENV=test node_modules/.bin/mocha test/server/**/*",
     "cover-test"              : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/*",
     "cover-cukes"             : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js",
-    "cuke"                    : "NODE_ENV=cucumber ./node_modules/.bin/cucumber.js",
+    "cuke"                    : "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
     "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
     "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
     "console"                 : "node repl"
