--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "mocha"               : "1.17.1",
     "selenium-launcher"   : "latest",
     "soda"                : "latest",
-    "coveralls"           : "2.0.16",
+    "coveralls"           : "2.10.0",
     "mocha-lcov-reporter" : "0.0.1"
   },
   "scripts": {
     "start"                   : "node app",
     "test"                    : "NODE_ENV=test node_modules/.bin/mocha test/server/**/*",
-    "cover-test"              : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/*",
-    "cover-cukes"             : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js",
+    "cover-test"              : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "cover-cukes"             : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cuke"                    : "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
     "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
     "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
