--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   "private"       : true,
   "engines"       : { "node": ">= 0.10.0" },
   "dependencies"  : {
-    "bcrypt"        : "0.7.7",
+    "bcrypt"        : "0.7.8",
     "connect-route" : "0.1.4",
-    "marked"        : "latest",
-    "mongoose"      : "3.8.8",
-    "nodemailer"    : "latest",
-    "node-uuid"     : "latest",
-    "options"       : "latest",
-    "redis"         : "latest",
-    "request"       : "latest",
+    "marked"        : "0.3.2",
+    "mongoose"      : "3.8.12",
+    "nodemailer"    : "0.7.0",
+    "node-uuid"     : "1.4.1",
+    "options"       : "0.0.5",
+    "redis"         : "0.10.3",
+    "request"       : "2.36.0",
     "socketstream"  : "git://github.com/socketstream/socketstream.git",
     "ss-coffee"     : "0.1.x",
     "ss-hogan"      : "0.1.x",
     "ss-jade"       : "0.1.x",
     "ss-stylus"     : "0.1.x",
-    "underscore"    : "latest"
+    "underscore"    : "1.6.0"
   },
   "devDependencies" : {
     "cucumber"            : "latest",
     "gently"              : "latest",
-    "istanbul"            : "0.2.4",
-    "mocha"               : "1.17.1",
+    "istanbul"            : "0.2.13",
+    "mocha"               : "1.20.1",
     "selenium-launcher"   : "1.1.10",
     "soda"                : "latest",
-    "coveralls"           : "2.10.0",
+    "coveralls"           : "2.10.1",
     "mocha-lcov-reporter" : "0.0.1"
   },
   "scripts": {
