Added name for dashku

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name"          : "Dashku",
+  "name"          : "dashku-web",
   "description"   : "Realtime dashboards and widgets built with HTML, CSS, and JavaScript",
   "version"       : "0.0.1",
   "author"        : "Anephenix <paul@anephenix.com> (http://anephenix.com)",
