--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cover-cukes"             : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cover-test"              : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cuke"                    : "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
+    "generateTestUser"        : "NODE_ENV=test node bin/generateTestUser",
     "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
     "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
     "start"                   : "node app",
