--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "bcrypt"        : "0.7.8",
     "connect-route" : "0.1.4",
     "marked"        : "0.3.2",
-    "mongoose"      : "3.8.12",
+    "mongoose"      : "3.8.14",
     "nodemailer"    : "0.7.0",
     "node-uuid"     : "1.4.1",
     "options"       : "0.0.5",
-    "redis"         : "0.10.3",
-    "request"       : "2.36.0",
+    "redis"         : "0.11.0",
+    "request"       : "2.39.0",
     "socketstream"  : "0.3.10",
     "ss-coffee"     : "0.1.x",
     "ss-hogan"      : "0.1.x",
@@ -28,21 +28,25 @@
     "underscore"    : "1.6.0"
   },
   "devDependencies" : {
-    "cucumber"            : "latest",
-    "gently"              : "latest",
-    "istanbul"            : "0.2.13",
+    "cucumber"            : "0.4.1",
+    "gently"              : "0.9.2",
+    "istanbul"            : "0.3.0",
     "mocha"               : "1.20.1",
+    "notes"               : "0.0.4",
+    "npm-dview"           : "0.3.0",
     "selenium-launcher"   : "1.1.10",
     "soda"                : "latest",
-    "coveralls"           : "2.10.1",
+    "coveralls"           : "2.11.1",
     "mocha-lcov-reporter" : "0.0.1"
   },
   "scripts": {
+    "checkDependencies"       : "node_modules/.bin/npm-dview",
     "console"                 : "node repl",
     "cover-cukes"             : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cover-test"              : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cuke"                    : "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
     "generateTestUser"        : "NODE_ENV=test node bin/generateTestUser",
+    "notes"                   : "node_modules/.bin/notes .",
     "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
     "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
     "start"                   : "node app",
