--- a/package.json
+++ b/package.json
@@ -1,55 +1,58 @@
 {
-  "name"          : "dashku-web",
-  "description"   : "Realtime dashboards and widgets built with HTML, CSS, and JavaScript",
-  "version"       : "0.0.2",
-  "author"        : "Anephenix <paul@anephenix.com> (http://anephenix.com)",
-  "contributors"  : [
+  "name": "dashku-web",
+  "description": "Realtime dashboards and widgets built with HTML, CSS, and JavaScript",
+  "version": "0.0.2",
+  "author": "Anephenix <paul@anephenix.com> (http://anephenix.com)",
+  "contributors": [
     "Nick Niemeir <nick.niemeir@gmail.com> (http://nrn.io)",
     "Stuart Quin (https://github.com/stuartquin)",
     "Joe Passavanti <gottaloveit@gmail.com>",
     "Maxime Beauchemin (https://github.com/mistercrunch)"
   ],
-  "engines"       : { "node": ">= 0.10.0" },
-  "dependencies"  : {
-    "bcrypt"        : "0.8.0",
-    "connect-route" : "0.1.4",
-    "marked"        : "0.3.2",
-    "mongoose"      : "3.8.16",
-    "nodemailer"    : "0.7.0",
-    "node-uuid"     : "1.4.1",
-    "options"       : "0.0.5",
-    "redis"         : "0.12.1",
-    "request"       : "2.44.0",
-    "socketstream"  : "0.3.10",
-    "ss-coffee"     : "0.1.x",
-    "ss-hogan"      : "0.1.x",
-    "ss-jade"       : "0.1.x",
-    "ss-stylus"     : "0.1.x",
-    "underscore"    : "1.7.0"
+  "engines": {
+    "node": ">= 0.10.0"
   },
-  "devDependencies" : {
-    "cucumber"            : "0.4.4",
-    "gently"              : "0.9.2",
-    "istanbul"            : "0.3.2",
-    "mocha"               : "1.21.4",
-    "notes"               : "0.0.4",
-    "npm-dview"           : "1.0.0",
-    "selenium-launcher"   : "1.1.10",
-    "soda"                : "latest",
-    "coveralls"           : "2.11.2",
-    "mocha-lcov-reporter" : "0.0.1"  
+  "dependencies": {
+    "bcrypt": "0.8.0",
+    "body-parser": "^1.9.0",
+    "connect-route": "0.1.4",
+    "marked": "0.3.2",
+    "mongoose": "3.8.16",
+    "node-uuid": "1.4.1",
+    "nodemailer": "0.7.0",
+    "options": "0.0.5",
+    "redis": "0.12.1",
+    "request": "2.44.0",
+    "socketstream": "0.3.11",
+    "ss-coffee": "0.1.x",
+    "ss-hogan": "0.1.x",
+    "ss-jade": "0.1.x",
+    "ss-stylus": "0.1.x",
+    "underscore": "1.7.0"
+  },
+  "devDependencies": {
+    "cucumber": "0.4.4",
+    "gently": "0.9.2",
+    "istanbul": "0.3.2",
+    "mocha": "1.21.4",
+    "notes": "0.0.4",
+    "npm-dview": "1.0.0",
+    "selenium-launcher": "1.1.10",
+    "soda": "latest",
+    "coveralls": "2.11.2",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
-    "checkDependencies"       : "node_modules/.bin/npm-dview",
-    "console"                 : "node repl",
-    "cover-cukes"             : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "cover-test"              : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "cuke"                    : "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
-    "generateTestUser"        : "NODE_ENV=test node bin/generateTestUser",
-    "notes"                   : "node_modules/.bin/notes .",
-    "populateWidgetTemplates" : "node lib/populateWidgetTemplates.js",
-    "regenerateApiKeyDb"      : "node lib/regenerateApiKeyDb",
-    "start"                   : "node app",
-    "test"                    : "NODE_ENV=test node_modules/.bin/mocha test/server/**/* test/lib/*"
+    "checkDependencies": "node_modules/.bin/npm-dview",
+    "console": "node repl",
+    "cover-cukes": "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "cover-test": "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "cuke": "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
+    "generateTestUser": "NODE_ENV=test node bin/generateTestUser",
+    "notes": "node_modules/.bin/notes .",
+    "populateWidgetTemplates": "node lib/populateWidgetTemplates.js",
+    "regenerateApiKeyDb": "node lib/regenerateApiKeyDb",
+    "start": "node app",
+    "test": "NODE_ENV=test node_modules/.bin/mocha test/server/**/* test/lib/*"
   }
 }
