--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ services:
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "nvm ls-remote"
 
 script: 
   - npm test
