--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "engines"       : { "node": ">= 0.10.0" },
   "dependencies"  : {
+    "parseurl"      : "1.3.0",
     "qs"            : "2.3.3",
     "bcrypt"        : "0.8.1",
     "body-parser"   : "1.11.0 ",
