--- a/package.json
+++ b/package.json
@@ -1,64 +1,67 @@
 {
-  "name"          : "dashku-web",
-  "repository"    : {
-    "type"  : "git",
-    "url"   : "git://github.com/anephenix/dashku"
+  "name": "dashku-web",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/anephenix/dashku"
   },
-  "description"   : "Realtime dashboards and widgets built with HTML, CSS, and JavaScript",
-  "version"       : "0.0.2",
-  "author"        : "Anephenix <paul@anephenix.com> (http://anephenix.com)",
-  "contributors"  : [
+  "description": "Realtime dashboards and widgets built with HTML, CSS, and JavaScript",
+  "version": "0.0.2",
+  "author": "Anephenix <paul@anephenix.com> (http://anephenix.com)",
+  "contributors": [
     "Nick Niemeir <nick.niemeir@gmail.com> (http://nrn.io)",
     "Stuart Quin (https://github.com/stuartquin)",
     "Joe Passavanti <gottaloveit@gmail.com>",
     "Maxime Beauchemin (https://github.com/mistercrunch)"
   ],
-  "engines"       : { "node": ">= 0.10.0" },
-  "dependencies"  : {
-    "parseurl"      : "1.3.0",
-    "qs"            : "2.4.1",
-    "bcrypt"        : "0.8.3",
-    "body-parser"   : "1.12.3",
-    "connect-route" : "0.1.5",
-    "marked"        : "0.3.3",
-    "mongoose"      : "4.0.2",
-    "nodemailer"    : "0.7.0",
-    "node-uuid"     : "1.4.3",
-    "options"       : "0.0.6",
-    "redis"         : "0.12.1",
-    "request"       : "2.55.0",
-    "socketstream"  : "0.3.12",
-    "ss-coffee"     : "0.1.x",
-    "ss-hogan"      : "0.1.x",
-    "ss-jade"       : "0.1.x",
-    "ss-stylus"     : "0.1.x",
-    "underscore"    : "1.8.3"
+  "engines": {
+    "node": ">= 0.10.0"
   },
-  "devDependencies" : {
-    "cucumber"            : "0.4.8",
-    "gently"              : "0.9.2",
-    "istanbul"            : "0.3.13",
-    "jshint"              : "2.7.0",
-    "mocha"               : "2.2.4",
-    "notes"               : "0.0.4",
-    "npm-dview"           : "1.1.2",
-    "selenium-launcher"   : "1.1.10",
-    "soda"                : "latest",
-    "coveralls"           : "2.11.2",
-    "mocha-lcov-reporter" : "0.0.2"
+  "dependencies": {
+    "bcrypt": "0.8.3",
+    "body-parser": "1.12.3",
+    "connect-route": "0.1.5",
+    "markdown": "^0.5.0",
+    "marked": "0.3.3",
+    "mongoose": "4.0.2",
+    "node-uuid": "1.4.3",
+    "nodemailer": "0.7.0",
+    "options": "0.0.6",
+    "parseurl": "1.3.0",
+    "qs": "2.4.1",
+    "redis": "0.12.1",
+    "request": "2.55.0",
+    "socketstream": "0.3.12",
+    "ss-coffee": "0.1.x",
+    "ss-hogan": "0.1.x",
+    "ss-jade": "0.1.x",
+    "ss-stylus": "0.1.x",
+    "underscore": "1.8.3"
   },
-  "scripts"         : {
-    "checkDependencies"         : "node_modules/.bin/npm-dview",
-    "console"                   : "node repl",
-    "cover-cukes"               : "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "cover-test"                : "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "cuke"                      : "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
-    "generateTestUser"          : "NODE_ENV=test node bin/generateTestUser",
-    "lint"                      : "jshint .",
-    "notes"                     : "node_modules/.bin/notes .",
-    "populateWidgetTemplates"   : "node lib/populateWidgetTemplates.js",
-    "regenerateApiKeyDb"        : "node lib/regenerateApiKeyDb",
-    "start"                     : "node app",
-    "test"                      : "NODE_ENV=test node_modules/.bin/mocha test/server/**/* test/lib/*"
+  "devDependencies": {
+    "cucumber": "0.4.8",
+    "gently": "0.9.2",
+    "istanbul": "0.3.13",
+    "jshint": "2.7.0",
+    "mocha": "2.2.4",
+    "notes": "0.0.4",
+    "npm-dview": "1.1.2",
+    "selenium-launcher": "1.1.10",
+    "soda": "latest",
+    "coveralls": "2.11.2",
+    "mocha-lcov-reporter": "0.0.2"
+  },
+  "scripts": {
+    "checkDependencies": "node_modules/.bin/npm-dview",
+    "console": "node repl",
+    "cover-cukes": "NODE_ENV=cucumber node_modules/.bin/istanbul cover node_modules/.bin/cucumber.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "cover-test": "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha test/server/**/* && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "cuke": "NODE_ENV=cucumber node_modules/.bin/cucumber.js",
+    "generateTestUser": "NODE_ENV=test node bin/generateTestUser",
+    "lint": "jshint .",
+    "notes": "node_modules/.bin/notes .",
+    "populateWidgetTemplates": "node lib/populateWidgetTemplates.js",
+    "regenerateApiKeyDb": "node lib/regenerateApiKeyDb",
+    "start": "node app",
+    "test": "NODE_ENV=test node_modules/.bin/mocha test/server/**/* test/lib/*"
   }
 }
