--- a/app.json
+++ b/app.json
@@ -21,5 +21,8 @@
   "addons": [
     "rediscloud",
     "mongolab"
-  ]
+  ],
+  "scripts": {
+    "postdeploy": "npm run populateWidgetTemplates"
+  }
 }
